--- a/src/pages/HomePage/home-page.scss
+++ b/src/pages/HomePage/home-page.scss
@@ -1,32 +1,167 @@
 .home-page {
-  color: red;
-  .game {
-    position: relative;
-    height: 400px;
-    width: 300px;
-    // object-fit: cover;
-    img {
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
+  background-color: #181819;
+
+  .home-page-container {
+    background-color: #202023;
+    padding: 0 40px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-top: 30px;
+
+    > div:first-child {
+      // width: 33%;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      margin-bottom: 20px;
+
+      p {
+        color: white;
+      }
     }
-    p {
-      position: absolute;
-      bottom: 0;
+
+    .input-container {
+      display: flex;
+      width: 33%;
+      height: 40px;
+      background-color: white;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 20px;
+      box-sizing: border-box;
+      border-radius: 5px;
+      margin-bottom: 20px;
+
+      input {
+        background-color: transparent;
+        border: none;
+
+        &:focus {
+          outline: none;
+        }
+      }
     }
-  }
-  .pages {
-    display: flex;
-    button {
+
+    > div:nth-child(2) {
+      display: flex;
+      align-items: flex-start;
+      margin-bottom: 20px;
+      max-height: 35px;
+
+      > div {
+        background-color: #404040;
+        border-radius: 5px;
+        color: white;
+        margin-right: 10px;
+        padding: 10px 15px;
+        // display: flex;
+        // align-items: center;
+        z-index: 4000;
+        &:hover {
+          cursor: pointer;
+        }
+        > p {
+          display: flex;
+          justify-content: space-between;
+          > div {
+            display: flex;
+            justify-content: space-between;
+          }
+        }
+        width: 250px;
+      }
+      :last-child {
+        .order {
+          margin-bottom: 5px;
+          display: flex;
+          justify-content: space-between;
+        }
+      }
+      li {
+        margin-bottom: 5px;
+        display: flex;
+        justify-content: space-between;
+      }
+    }
+
+    > div:nth-child(3) {
+      // width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      box-sizing: border-box;
+      :not(:nth-child(5n)) {
+        margin-right: 20px;
+      }
+    }
+
+    span {
+      font-weight: bold;
+      margin-left: 5px;
+    }
+
+    .game {
+      box-sizing: border-box;
+      position: relative;
+      height: 300px;
+      width: calc(20% - (20px * 4 / 5));
+      margin-bottom: 20px;
+
+      img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+
+      p {
+        box-sizing: border-box;
+        position: absolute;
+        bottom: 0;
+        background-color: rgb(0, 0, 0, 0.5);
+        padding: 10px;
+        height: 50px;
+        width: 100%;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        color: white;
+      }
+      &:hover {
+        cursor: pointer;
+        transform: scale(1.04);
+        border: white solid 3px;
+        border-radius: 10px;
+      }
+    }
+
+    .pages {
       display: flex;
       justify-content: center;
-      align-items: center;
-      border: solid black 2px;
-      height: 50px;
-      width: 50px;
-    }
-    .page {
-      color: green;
+      padding-bottom: 20px;
+
+      button:not(:last-child) {
+        margin-right: 20px;
+      }
+
+      button {
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // border: solid black 2px;
+        height: 30px;
+        width: 30px;
+        background-color: transparent;
+        color: white;
+        &:hover {
+          cursor: pointer;
+          transform: scale(1.1);
+        }
+      }
+
+      .page {
+        background: #ff4655;
+        border-radius: 5px;
+      }
     }
   }
 }
