--- a/src/pages/GamePage/game-page.scss
+++ b/src/pages/GamePage/game-page.scss
@@ -7,6 +7,10 @@
     max-width: 1200px;
     margin: 0 auto;
     padding-top: 30px;
+    .title {
+      display: flex;
+      justify-content: flex-start;
+    }
     h1 {
       color: white;
       font-size: 25px;
@@ -94,6 +98,7 @@
     .games {
       display: flex;
       flex-wrap: wrap;
+      margin-bottom: 40px;
     }
     .game {
       box-sizing: border-box;
