--- a/src/pages/HomePage/home-page.scss
+++ b/src/pages/HomePage/home-page.scss
@@ -7,8 +7,22 @@
     max-width: 1200px;
     margin: 0 auto;
     padding-top: 30px;
-
     > div:first-child {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 40px;
+      img {
+        height: 70px;
+      }
+      p {
+        color: white;
+        font-size: 90px;
+        font-weight: bold;
+      }
+    }
+
+    > div:nth-child(2) {
       // width: 33%;
       display: flex;
       align-items: center;
@@ -42,7 +56,7 @@
       }
     }
 
-    > div:nth-child(2) {
+    > div:nth-child(3) {
       display: flex;
       align-items: flex-start;
       margin-bottom: 20px;
@@ -72,19 +86,29 @@
       }
       :last-child {
         .order {
+          padding: 3px 0;
           margin-bottom: 5px;
           display: flex;
           justify-content: space-between;
+          &:hover {
+            border-bottom: solid white 1px;
+          }
         }
       }
       li {
+        box-sizing: border-box;
         margin-bottom: 5px;
         display: flex;
         justify-content: space-between;
+        padding: 3px 0;
+        &:hover {
+          box-sizing: border-box;
+          border-bottom: solid white 1px;
+        }
       }
     }
 
-    > div:nth-child(3) {
+    > div:nth-child(4) {
       // width: 100%;
       display: flex;
       flex-wrap: wrap;
