--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -53,7 +53,7 @@
         padding: 5px 10px;
         &:hover {
           cursor: pointer;
-          border-bottom: solid white 2px;
+          // border-bottom: solid white 2px;
         }
       }
       .name {
