--- a/src/pages/HomePage/home-page.scss
+++ b/src/pages/HomePage/home-page.scss
@@ -12,6 +12,9 @@
       justify-content: center;
       align-items: center;
       margin-bottom: 40px;
+      &:hover {
+        cursor: pointer;
+      }
       img {
         height: 70px;
       }
